@@ -2,6 +2,7 @@ package app.pages;
 
 import app.AppTheme;
 import app.components.BankSelectComponent;
+import ujfe.html.Element;
 import ujfe.html.Node;
 import ujfe.router.Page;
 
@@ -30,10 +31,12 @@ public final class DocumentationPage {
                                         main()
                                                 .css("min-w-0 flex flex-col gap-4")
                                                 .child(introSection())
+                                                .child(modernJavaSection())
                                                 .child(themeSection())
                                                 .child(elementCatalogSection())
                                                 .child(formSection())
                                                 .child(cssSection())
+                                                .child(springSection())
                                                 .child(securitySection())
                                                 .child(restSection())
                                                 .child(cliSection())
@@ -52,12 +55,12 @@ public final class DocumentationPage {
                                         div()
                                                 .css("flex flex-col gap-1")
                                                 .child(span("UJFE Docs").css("text-sm font-bold text-primary-700"))
-                                                .child(h1("Documentacao do DSL").css("text-3xl font-bold"))
+                                                .child(h1("DSL Documentation").css("text-3xl font-bold"))
                                 )
                                 .child(
                                         nav()
                                                 .css("flex items-center gap-2")
-                                                .child(a("Exemplo").attr("href", "/").css("px-3 py-2 rounded border border-slate-200 bg-white text-sm font-semibold text-slate-700"))
+                                                .child(a("Example").attr("href", "/").css("px-3 py-2 rounded border border-slate-200 bg-white text-sm font-semibold text-slate-700"))
                                                 .child(a("Docs").attr("href", "/docs").css("px-3 py-2 rounded bg-primary-700 text-white text-sm font-semibold"))
                                 )
                 );
@@ -68,26 +71,28 @@ public final class DocumentationPage {
                 .css("rounded-lg border border-primary-200 bg-primary-50 p-4 shadow-sm")
                 .child(nav()
                         .css("flex flex-col gap-3")
-                        .child(h2("Mapa").css("text-xl font-bold text-primary-700"))
-                        .child(p("Referencia visual dos elementos, formularios, CSS server-side e consumo REST.")
+                        .child(h2("Map").css("text-xl font-bold text-primary-700"))
+                        .child(p("Visual API reference for elements, forms, internal/external CSS, Spring MVC, and REST usage.")
                                 .css("text-sm text-slate-700 leading-relaxed"))
                         .child(ul()
                                 .css("flex flex-col gap-2 text-sm text-slate-700")
-                                .child(le().child(strong("Tema")).child(" com primary/secondary dinamicos"))
-                                .child(le().child(strong("Elementos")).child(" com exemplos de uso"))
-                                .child(le().child(strong("Formularios")).child(" com inputs e eventos"))
-                                .child(le().child(strong("CSS")).child(" com utilitarios e escala de cores"))
-                                .child(le().child(strong("Seguranca")).child(" com escaping, URL safe e headers"))
-                                .child(le().child(strong("REST")).child(" com select vindo da BrasilAPI"))
-                                .child(le().child(strong("CLI")).child(" com conversao HTML para UJFE"))
-                                .child(le().child(strong("Dev Preview")).child(" com inspetor visual"))));
+                                .child(le().child(strong("Theme")).child(" with dynamic primary/secondary palettes"))
+                                .child(le().child(strong("Modern Java")).child(" with var, records, streams, switch expressions, and script-style source files"))
+                                .child(le().child(strong("Elements")).child(" with API usage examples"))
+                                .child(le().child(strong("Forms")).child(" with inputs and events"))
+                                .child(le().child(strong("CSS")).child(" with utilities and color scales"))
+                                .child(le().child(strong("Spring MVC")).child(" on the same Tomcat port"))
+                                .child(le().child(strong("Security")).child(" with escaping, safe URLs, and headers"))
+                                .child(le().child(strong("REST")).child(" with a select populated from BrasilAPI"))
+                                .child(le().child(strong("CLI")).child(" with HTML-to-UJFE conversion"))
+                                .child(le().child(strong("Dev Preview")).child(" with a visual inspector"))));
     }
 
     private Node introSection() {
         return section()
                 .css("rounded-lg border border-slate-200 bg-white p-6 shadow-sm flex flex-col gap-3")
-                .child(h2("Como ler esta pagina").css("text-2xl font-bold"))
-                .child(p("Cada bloco mostra o resultado renderizado e o codigo Java equivalente. A pagina tambem usa classes CSS geradas no servidor e eventos Live para trocar o tema sem JavaScript manual.")
+                .child(h2("How to read this page").css("text-2xl font-bold"))
+                .child(p("Each block shows the rendered result and the equivalent Java code. The DSL uses Element.of(...) as universal support for any HTML tag, helpers as convenience methods, and generic attributes through attr(...).")
                         .css("text-base text-slate-700 leading-relaxed"))
                 .child(codeBlock(factoryIndex()));
     }
@@ -95,16 +100,16 @@ public final class DocumentationPage {
     private Node themeSection() {
         return section()
                 .css("rounded-lg border border-primary-200 bg-white p-6 shadow-sm flex flex-col gap-4")
-                .child(h2("Tema dinamico").css("text-2xl font-bold text-primary-700"))
+                .child(h2("Dynamic theme").css("text-2xl font-bold text-primary-700"))
                 .child(p(() -> "Primary: " + theme.primaryColor() + " | Secondary: " + theme.secondaryColor())
                         .css("text-sm font-mono text-slate-700"))
                 .child(
                         div()
                                 .css("flex flex-wrap gap-2")
-                                .child(button("Azul + Verde")
+                                .child(button("Blue + Emerald")
                                         .css("px-4 py-2 rounded bg-primary-700 text-white font-semibold")
                                         .onClick(theme::useBlueEmerald))
-                                .child(button("Rosa + Amber")
+                                .child(button("Rose + Amber")
                                         .css("px-4 py-2 rounded border border-primary-200 bg-primary-50 text-primary-700 font-semibold")
                                         .onClick(theme::useRoseAmber))
                                 .child(button("Indigo + Cyan")
@@ -118,6 +123,15 @@ public final class DocumentationPage {
                                 .child(colorScale("Secondary", "secondary"))
                 )
                 .child(codeBlock(themeCode()));
+    }
+
+    private Node modernJavaSection() {
+        return section()
+                .css("rounded-lg border border-secondary-200 bg-white p-6 shadow-sm flex flex-col gap-4")
+                .child(h2("Modern Java examples").css("text-2xl font-bold text-secondary-700"))
+                .child(p("UJFE examples prefer modern Java syntax where it improves clarity: var for local values, records for small immutable view models, streams and lambdas for declarative collection mapping, and switch expressions for compact branching.")
+                        .css("text-base text-slate-700 leading-relaxed"))
+                .child(codeBlock(modernJavaCode()));
     }
 
     private Node colorScale(String title, String palette) {
@@ -144,25 +158,31 @@ public final class DocumentationPage {
     private Node elementCatalogSection() {
         return section()
                 .css("flex flex-col gap-4")
-                .child(h2("Elementos HTML suportados").css("text-2xl font-bold"))
+                .child(h2("Supported HTML elements").css("text-2xl font-bold"))
                 .child(
                         div()
                                 .css("catalog-grid gap-4")
                                 .child(docCard(
-                                        "Layout e texto",
-                                        "Containers, headings, texto, enfase e blocos de codigo.",
+                                        "Layout and text",
+                                        "Containers, headings, text, emphasis, and code blocks.",
                                         layoutCode(),
                                         layoutPreview()
                                 ))
                                 .child(docCard(
-                                        "Links, listas e midia",
-                                        "Ancora, listas, imagem, canvas, audio, video e elementos descritivos.",
+                                        "Links, lists, and media",
+                                        "Anchors, lists, images, picture/source, canvas, audio, video, maps, and embedded content.",
                                         listAndMediaCode(),
                                         listAndMediaPreview()
                                 ))
                                 .child(docCard(
-                                        "Eventos Live",
-                                        "Click, input, change e submit geram event ids e executam Runnable no Java.",
+                                        "Interactivity and tables",
+                                        "Details, summary, dialog, popover, template, slot, and real HTML tables generated with Java loops.",
+                                        modernHtmlCode(),
+                                        modernHtmlPreview()
+                                ))
+                                .child(docCard(
+                                        "Live events",
+                                        "Click, input, change, and submit generate event ids and execute Runnable handlers in Java.",
                                         liveEventCode(),
                                         liveEventPreview()
                                 ))
@@ -172,19 +192,19 @@ public final class DocumentationPage {
     private Node formSection() {
         return section()
                 .css("rounded-lg border border-secondary-200 bg-white p-6 shadow-sm flex flex-col gap-4")
-                .child(h2("Formularios").css("text-2xl font-bold text-secondary-700"))
-                .child(p("O DSL cobre os principais elementos de formulario e os tipos comuns de input.")
+                .child(h2("Forms").css("text-2xl font-bold text-secondary-700"))
+                .child(p("The DSL covers form elements with helpers, but attributes such as required, placeholder, min, and max can also be declared directly with attr(...).")
                         .css("text-base text-slate-700 leading-relaxed"))
                 .child(
                         form()
                                 .css("grid grid-cols-2 gap-3")
                                 .onSubmit(() -> {
                                 })
-                                .child(label("Texto").forId("doc-text").css("text-sm font-semibold text-slate-700"))
+                                .child(label("Text").forId("doc-text").css("text-sm font-semibold text-slate-700"))
                                 .child(inputText().id("doc-text").name("text").placeholder("inputText()").css("w-full rounded border border-slate-200 bg-white p-2 text-sm"))
-                                .child(label("Numero").forId("doc-number").css("text-sm font-semibold text-slate-700"))
+                                .child(label("Number").forId("doc-number").css("text-sm font-semibold text-slate-700"))
                                 .child(inputNumber().id("doc-number").name("number").min("0").max("99").css("w-full rounded border border-slate-200 bg-white p-2 text-sm"))
-                                .child(label("Senha").forId("doc-password").css("text-sm font-semibold text-slate-700"))
+                                .child(label("Password").forId("doc-password").css("text-sm font-semibold text-slate-700"))
                                 .child(inputPassword().id("doc-password").name("password").placeholder("inputPassword()").css("w-full rounded border border-slate-200 bg-white p-2 text-sm"))
                                 .child(label("Select").forId("doc-select").css("text-sm font-semibold text-slate-700"))
                                 .child(select().id("doc-select").name("select").css("w-full rounded border border-slate-200 bg-white p-2 text-sm")
@@ -201,34 +221,50 @@ public final class DocumentationPage {
     private Node cssSection() {
         return section()
                 .css("rounded-lg border border-primary-200 bg-primary-50 p-6 shadow-sm flex flex-col gap-4")
-                .child(h2("CSS server-side").css("text-2xl font-bold text-primary-700"))
-                .child(p("O renderer coleta as classes usadas durante o render, gera somente os utilitarios encontrados e cria variaveis CSS para primary/secondary.")
+                .child(h2("Internal or external CSS").css("text-2xl font-bold text-primary-700"))
+                .child(p("INTERNAL mode keeps the current server-side utility renderer. EXTERNAL mode disables UJFE CSS generation and lets teams use Tailwind, Bootstrap, plain CSS, or design systems through regular head links.")
                         .css("text-base text-slate-700 leading-relaxed"))
                 .child(
                         div()
                                 .css("grid grid-cols-3 gap-3")
                                 .child(cssPill("Layout", "flex, grid, app-shell, demo-grid, docs-grid"))
-                                .child(cssPill("Espacamento", "p-2..p-8, px-*, py-*, gap-*"))
-                                .child(cssPill("Tipografia", "text-xs..text-4xl, font-*, font-mono"))
-                                .child(cssPill("Bordas", "rounded, border, border-primary-200"))
-                                .child(cssPill("Cores", "bg-primary-50, text-secondary-700"))
-                                .child(cssPill("Responsivo", "media query para grids do exemplo"))
+                                .child(cssPill("Spacing", "p-2..p-8, px-*, py-*, gap-*"))
+                                .child(cssPill("Typography", "text-xs..text-4xl, font-*, font-mono"))
+                                .child(cssPill("Borders", "rounded, border, border-primary-200"))
+                                .child(cssPill("Colors", "bg-primary-50, text-secondary-700"))
+                                .child(cssPill("Responsive", "media queries for example grids"))
                 )
                 .child(codeBlock(cssCode()));
+    }
+
+    private Node springSection() {
+        return section()
+                .css("rounded-lg border border-secondary-200 bg-white p-6 shadow-sm flex flex-col gap-4")
+                .child(h2("Spring Boot on the same port").css("text-2xl font-bold text-secondary-700"))
+                .child(p("Use ujfe-spring when the Spring Boot application must serve UJFE pages, live events, and internal assets through the same DispatcherServlet/Tomcat port. The ujfe-http module remains available for standalone Netty mode.")
+                        .css("text-base text-slate-700 leading-relaxed"))
+                .child(
+                        div()
+                                .css("grid grid-cols-3 gap-3")
+                                .child(cssPill("Tomcat", "same server.port as the application"))
+                                .child(cssPill("UJFE routes", "only paths registered in Router"))
+                                .child(cssPill("Spring MVC", "controllers and static resources coexist"))
+                )
+                .child(codeBlock(springCode()));
     }
 
     private Node securitySection() {
         return section()
                 .css("rounded-lg border border-rose-200 bg-white p-6 shadow-sm flex flex-col gap-4")
-                .child(h2("Seguranca por padrao").css("text-2xl font-bold text-rose-700"))
-                .child(p("Texto e atributos sao escapados durante o SSR. Atributos de URL como href, src, action e poster rejeitam protocolos perigosos antes de renderizar.")
+                .child(h2("Security by default").css("text-2xl font-bold text-rose-700"))
+                .child(p("Text and attributes are escaped during SSR. URL attributes such as href, src, action, and poster reject dangerous protocols before rendering.")
                         .css("text-base text-slate-700 leading-relaxed"))
                 .child(
                         div()
                                 .css("grid grid-cols-3 gap-3")
-                                .child(cssPill("A03 Injection", "escaping HTML/atributos e URLs seguras"))
+                                .child(cssPill("A03 Injection", "HTML/attribute escaping and safe URLs"))
                                 .child(cssPill("A05 Misconfiguration", "CSP, nosniff, frame-ancestors"))
-                                .child(cssPill("A01 Access Control", "eventId opaco e handlers no servidor"))
+                                .child(cssPill("A01 Access Control", "opaque eventId and server-side handlers"))
                 )
                 .child(codeBlock(securityCode()));
     }
@@ -236,8 +272,8 @@ public final class DocumentationPage {
     private Node restSection() {
         return section()
                 .css("rounded-lg border border-secondary-200 bg-white p-6 shadow-sm flex flex-col gap-4")
-                .child(h2("Componentes com API REST").css("text-2xl font-bold text-secondary-700"))
-                .child(p("O core inclui RestClient baseado no HttpClient do Java 11. O componente abaixo consulta a BrasilAPI e usa o resultado para preencher um select.")
+                .child(h2("Components with REST APIs").css("text-2xl font-bold text-secondary-700"))
+                .child(p("The core module includes RestClient, based on Java HttpClient. The component below queries BrasilAPI and uses the result to populate a select.")
                         .css("text-base text-slate-700 leading-relaxed"))
                 .child(bankSelect.render())
                 .child(codeBlock(restCode()));
@@ -247,7 +283,7 @@ public final class DocumentationPage {
         return section()
                 .css("rounded-lg border border-primary-200 bg-primary-50 p-6 shadow-sm flex flex-col gap-4")
                 .child(h2("CLI").css("text-2xl font-bold text-primary-700"))
-                .child(p("O primeiro comando do CLI converte HTML puro para uma pagina Java UJFE. React/JSX fica fora do MVP porque precisa lidar com props dinamicas, hooks, condicionais, map e componentes externos.")
+                .child(p("The first CLI command converts plain HTML to a Java UJFE page. React/JSX stays outside the MVP because it requires dynamic props, hooks, conditionals, map, and external component handling.")
                         .css("text-base text-slate-700 leading-relaxed"))
                 .child(
                         div()
@@ -255,25 +291,25 @@ public final class DocumentationPage {
                                 .child(
                                         div()
                                                 .css("rounded-lg border border-primary-200 bg-white p-3 flex flex-col gap-2")
-                                                .child(h3("Comando").css("text-lg font-bold text-primary-700"))
+                                                .child(h3("Command").css("text-lg font-bold text-primary-700"))
                                                 .child(codeBlock(cliCommandCode()))
                                 )
                                 .child(
                                         div()
                                                 .css("rounded-lg border border-primary-200 bg-white p-3 flex flex-col gap-2")
-                                                .child(h3("Entrada HTML").css("text-lg font-bold text-primary-700"))
+                                                .child(h3("HTML input").css("text-lg font-bold text-primary-700"))
                                                 .child(codeBlock(cliInputCode()))
                                 )
                 )
-                .child(h3("Saida gerada").css("text-lg font-bold text-primary-700"))
+                .child(h3("Generated output").css("text-lg font-bold text-primary-700"))
                 .child(codeBlock(cliOutputCode()));
     }
 
     private Node devPreviewSection() {
         return section()
                 .css("rounded-lg border border-primary-200 bg-white p-6 shadow-sm flex flex-col gap-4")
-                .child(h2("Dev Preview visual").css("text-2xl font-bold text-primary-700"))
-                .child(p("No exemplo, o servidor inicia com Dev Preview ativo. O painel flutuante permite selecionar elementos, ver tag/id e testar classes CSS diretamente no browser sem alterar o Java.")
+                .child(h2("Visual Dev Preview").css("text-2xl font-bold text-primary-700"))
+                .child(p("In the example app, the server starts with Dev Preview enabled. The floating panel lets developers select elements, inspect tag/id, and test CSS classes directly in the browser without changing Java.")
                         .css("text-base text-slate-700 leading-relaxed"))
                 .child(codeBlock(devPreviewCode()));
     }
@@ -306,21 +342,54 @@ public final class DocumentationPage {
                 .child(h1("h1").css("text-3xl font-bold text-primary-700"))
                 .child(h2("h2").css("text-2xl font-semibold"))
                 .child(h3("h3").css("text-lg font-semibold text-secondary-700"))
-                .child(p("p() com ").child(strong("strong")).child(", ").child(em("em")).child(" e ").child(u("u")))
+                .child(p("p() with ").child(strong("strong")).child(", ").child(em("em")).child(", and ").child(u("u")))
                 .child(pre().css("rounded bg-zinc-950 text-zinc-50 p-2 text-xs font-mono").child(code("pre().child(code(...))").css("font-mono")));
     }
 
     private Node listAndMediaPreview() {
         return div()
                 .css("flex flex-col gap-2")
-                .child(a("Link para home").href("/").title("Voltar para home").css("text-primary-700 font-semibold"))
-                .child(ul().css("flex flex-col gap-1 text-sm").child(le().child("ul + le/li")).child(le().child("item dois")))
-                .child(ol().css("flex flex-col gap-1 text-sm").child(le().child("ol + le/li")).child(le().child("item dois")))
-                .child(dl().css("text-sm").child(dt().child(strong("dt()")).child(" dentro de dl()")))
-                .child(canvas().width(240).height(72).ariaLabel("Canvas vazio").css("border border-slate-200 rounded bg-white"))
+                .child(a("Home link").href("/").title("Back to home").css("text-primary-700 font-semibold"))
+                .child(ul().css("flex flex-col gap-1 text-sm").child(le().child("ul + le/li")).child(le().child("item two")))
+                .child(ol().css("flex flex-col gap-1 text-sm").child(le().child("ol + le/li")).child(le().child("item two")))
+                .child(dl().css("text-sm").child(dt().child(strong("dt()"))).child(dd("inside dl()")))
+                .child(canvas().width(240).height(72).ariaLabel("Empty canvas").css("border border-slate-200 rounded bg-white"))
                 .child(video().src("/demo.mp4").poster("/poster.png").controls(true).preload("metadata").css("w-full rounded border border-slate-200"))
                 .child(audio().controls(true).preload("metadata").child(source().src("/audio.mp3").type("audio/mpeg")))
                 .child(img().src("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///ywAAAAAAQABAAACAUwAOw==").alt("pixel").css("border border-slate-200 rounded"));
+    }
+
+    private Node modernHtmlPreview() {
+        return div()
+                .css("flex flex-col gap-2")
+                .child(details()
+                        .attr("open", true)
+                        .child(summary("details + summary"))
+                        .child(p("Expanded content without JavaScript.")))
+                .child(tagTablePreview())
+                .child(template().child(slot().attr("name", "actions")))
+                .child(Element.of("custom-panel").attr("data-kind", "future").child("Future tag through Element.of"));
+    }
+
+    private Node tagTablePreview() {
+        var rows = new String[][]{
+                {"dialog", "Native interaction"},
+                {"template", "Inert content"},
+                {"slot", "Web Components"},
+                {"popover", "Modern interaction"}
+        };
+        var body = tbody();
+        for (var row : rows) {
+            body.child(tr().child(td(row[0])).child(td(row[1])));
+        }
+
+        return table()
+                .css("w-full text-sm border border-slate-200")
+                .child(caption("Real table generated with a Java loop").css("text-left font-semibold"))
+                .child(colgroup().child(col().attr("span", "1")).child(col().attr("span", "1")))
+                .child(thead().child(tr().child(th("Tag")).child(th("Use"))))
+                .child(body)
+                .child(tfoot().child(tr().child(td().attr("colspan", "2").child("Rows generated in Java"))));
     }
 
     private Node liveEventPreview() {
@@ -338,66 +407,162 @@ public final class DocumentationPage {
 
     private String factoryIndex() {
         return ""
+                + "import ujfe.html.Element;\n\n"
                 + "import static ujfe.html.UI.*;\n\n"
-                + "// Texto e estrutura\n"
-                + "text(), div(), header(), main(), aside(), section(), nav(), span()\n"
-                + "h1(), h2(), h3(), h4(), h5(), p(), br(), pre(), code()\n"
-                + "b(), i(), u(), em(), strong()\n\n"
-                + "// Atributos globais fluentes em qualquer Element\n"
-                + ".id(), .title(), .lang(), .dir(), .role(), .aria(), .ariaLabel()\n"
-                + ".data(), .tabindex(), .accessKey(), .contentEditable(), .enabled()\n\n"
-                + "// Links, listas e midia\n"
-                + "a(), img(), picture(), source(), track(), audio(), video(), canvas()\n"
-                + "map(), area(), iframe(), object(), embed(), param()\n"
-                + "ul(), ol(), le(), li(), dl(), dt(), html()\n\n"
-                + "// Formularios\n"
+                + "// Generic core: supports current tags, custom elements, and future tags.\n"
+                + "Element.of(\"dialog\").attr(\"open\", true)\n"
+                + "element(\"custom-panel\").attr(\"data-kind\", \"future\")\n\n"
+                + "// Document and layout.\n"
+                + "html(), head(), body(), title(), meta(), link(), style(), script(), base()\n"
+                + "div(), header(), main(), aside(), section(), article(), nav(), footer(), address()\n"
+                + "figure(), figcaption(), details(), summary(), dialog(), modal()\n\n"
+                + "// Text.\n"
+                + "text(), span(), h1(), h2(), h3(), h4(), h5(), h6(), p(), br(), hr()\n"
+                + "strong(), em(), b(), i(), u(), small(), mark(), abbr(), cite(), pre(), code(), blockquote(), q()\n\n"
+                + "// Links, lists, media, tables, and templates.\n"
+                + "a(), ul(), ol(), li(), le(), dl(), dt(), dd()\n"
+                + "img(), picture(), source(), track(), audio(), video(), canvas(), svg()\n"
+                + "map(), area(), iframe(), object(), embed(), param(), table(), thead(), tbody(), tfoot(), tr(), td(), th(), caption(), colgroup(), col()\n"
+                + "template(), slot()\n\n"
+                + "// Forms and attributes.\n"
                 + "form(), label(), input(), inputText(), inputNumber(), inputPassword()\n"
                 + "inputEmail(), inputSearch(), inputTel(), inputUrl(), inputHidden()\n"
                 + "inputDate(), inputTime(), inputDateTimeLocal(), inputMonth(), inputWeek()\n"
                 + "inputColor(), inputFile(), inputRange(), inputButton(), inputImage()\n"
                 + "inputSubmit(), inputReset(), checkbox(), radio(), select(), option()\n"
                 + "optgroup(), textarea(), fieldset(), legend(), datalist(), output()\n"
-                + "progress(), meter(), button(), element(\"custom-tag\")\n";
+                + "progress(), meter(), button()\n\n"
+                + "input().attr(\"placeholder\", \"Name\").attr(\"required\", true)\n";
     }
 
     private String themeCode() {
         return ""
                 + "AppTheme appTheme = new AppTheme();\n"
                 + "Router router = new Router().register(new DocumentationPage(appTheme));\n"
-                + "LiveSession liveSession = new LiveSession(router, appTheme::cssTheme);\n\n"
+                + "LiveSessionConfig config = LiveSessionConfig.builder()\n"
+                + "    .themeSupplier(appTheme::cssTheme)\n"
+                + "    .lang(\"en\")\n"
+                + "    .title(\"UJFE Docs\")\n"
+                + "    .build();\n"
+                + "var liveSession = new LiveSession(router, config);\n\n"
                 + "public CssTheme cssTheme() {\n"
                 + "    return CssTheme.of(primaryColor.get(), secondaryColor.get());\n"
                 + "}\n\n"
                 + "div().css(\"bg-primary-50 border border-primary-200 text-primary-700\")\n"
-                + "button(\"Trocar tema\").onClick(appTheme::useRoseAmber)\n";
+                + "button(\"Switch theme\").onClick(appTheme::useRoseAmber)\n";
+    }
+
+    private String modernJavaCode() {
+        return ""
+                + "// Demo.java - run with: java Demo.java\n"
+                + "import java.util.List;\n"
+                + "import ujfe.core.ClientState;\n"
+                + "import ujfe.core.Node;\n"
+                + "import ujfe.live.LiveSession;\n"
+                + "import ujfe.router.Router;\n"
+                + "import static ujfe.html.UI.*;\n\n"
+                + "record Metric(String label, int value, String status) {}\n\n"
+                + "record MetricsPage(List<Metric> metrics) {\n"
+                + "    public Node render() {\n"
+                + "        var rows = metrics.stream()\n"
+                + "            .map(metric -> tr()\n"
+                + "                .child(td(metric.label()))\n"
+                + "                .child(td(String.valueOf(metric.value())).css(switch (metric.status()) {\n"
+                + "                    case \"ok\" -> \"text-emerald-700\";\n"
+                + "                    case \"warn\" -> \"text-amber-700\";\n"
+                + "                    default -> \"text-slate-700\";\n"
+                + "                })))\n"
+                + "            .toList();\n\n"
+                + "        return table()\n"
+                + "            .child(caption(\"Metrics\"))\n"
+                + "            .child(thead().child(tr().child(th(\"Label\")).child(th(\"Value\"))))\n"
+                + "            .child(tbody().children(rows));\n"
+                + "    }\n"
+                + "}\n\n"
+                + "void main() {\n"
+                + "    var metrics = List.of(\n"
+                + "        new Metric(\"Users\", 42, \"ok\"),\n"
+                + "        new Metric(\"Errors\", 2, \"warn\")\n"
+                + "    );\n\n"
+                + "    var router = new Router().register(\"/\", () -> new MetricsPage(metrics));\n"
+                + "    var liveSession = new LiveSession(router);\n"
+                + "    System.out.println(liveSession.renderDocument(\"/\", ClientState.empty()));\n"
+                + "}\n";
     }
 
     private String layoutCode() {
         return ""
                 + "div()\n"
-                + "    .child(header().child(h1(\"Titulo\")))\n"
-                + "    .child(main().child(section().child(h2(\"Secao\"))))\n"
+                + "    .child(header().child(h1(\"Title\")))\n"
+                + "    .child(main().child(section().child(h2(\"Section\"))))\n"
+                + "    .child(article().child(h3(\"Article\")).child(p(\"Content\")))\n"
                 + "    .child(aside().child(nav().child(a(\"Docs\").attr(\"href\", \"/docs\"))))\n"
-                + "    .child(p(\"Texto\").child(br()).child(strong(\"forte\")))\n"
-                + "    .child(pre().child(code(\"codigo\")));\n";
+                + "    .child(footer().child(address(\"contact@example.com\")))\n"
+                + "    .child(p(\"Text\").child(br()).child(strong(\"strong\")).child(\" \").child(mark(\"marked\")))\n"
+                + "    .child(pre().child(code(\"code\")));\n";
     }
 
     private String listAndMediaCode() {
         return ""
                 + "a(\"Home\").attr(\"href\", \"/\")\n"
                 + "img().src(\"/logo.png\").alt(\"Logo\")\n"
-                + "canvas().width(320).height(180).ariaLabel(\"Grafico\")\n"
+                + "picture()\n"
+                + "    .child(source().attr(\"media\", \"(min-width: 800px)\").src(\"/hero-wide.webp\"))\n"
+                + "    .child(img().src(\"/hero.webp\").alt(\"Dashboard\"))\n"
+                + "canvas().width(320).height(180).ariaLabel(\"Chart\")\n"
                 + "video().src(\"/demo.mp4\").poster(\"/poster.png\").controls(true)\n"
-                + "audio().controls(true).child(source().src(\"/audio.mp3\").type(\"audio/mpeg\"))\n"
+                + "audio().controls(true)\n"
+                + "    .child(source().src(\"/audio.mp3\").type(\"audio/mpeg\"))\n"
+                + "    .child(track().attr(\"kind\", \"captions\").attr(\"srclang\", \"en\").src(\"/captions.vtt\"))\n"
+                + "figure().child(svg().attr(\"viewBox\", \"0 0 10 10\")).child(figcaption(\"SVG\"))\n"
+                + "map().attr(\"name\", \"primary-map\").child(area().attr(\"shape\", \"rect\").attr(\"coords\", \"0,0,20,20\").href(\"/docs\"))\n"
+                + "iframe().src(\"/embedded\").attr(\"loading\", \"lazy\")\n"
+                + "object().attr(\"data\", \"/report.pdf\").type(\"application/pdf\")\n"
+                + "embed().src(\"/preview.pdf\").type(\"application/pdf\")\n"
                 + "param().attr(\"name\", \"autoplay\").attr(\"value\", \"false\")\n"
                 + "ul().child(le().child(\"Item\"))\n"
                 + "ol().child(li().child(\"Item\"))\n"
-                + "dl().child(dt().child(\"Termo\"));\n";
+                + "dl().child(dt(\"Term\")).child(dd(\"Description\"));\n";
+    }
+
+    private String modernHtmlCode() {
+        return ""
+                + "record Metric(String name, int value, String status) {}\n\n"
+                + "var metrics = List.of(\n"
+                + "    new Metric(\"Users\", 42, \"ok\"),\n"
+                + "    new Metric(\"Errors\", 2, \"warn\")\n"
+                + ");\n\n"
+                + "var rows = metrics.stream()\n"
+                + "    .map(metric -> {\n"
+                + "        var tone = switch (metric.status()) {\n"
+                + "            case \"ok\" -> \"text-emerald-700\";\n"
+                + "            case \"warn\" -> \"text-amber-700\";\n"
+                + "            default -> \"text-slate-700\";\n"
+                + "        };\n"
+                + "        return tr()\n"
+                + "            .child(td(metric.name()))\n"
+                + "            .child(td(String.valueOf(metric.value())).css(tone));\n"
+                + "    })\n"
+                + "    .toList();\n\n"
+                + "details().attr(\"open\", true)\n"
+                + "    .child(summary(\"More\"))\n"
+                + "    .child(p(\"Native content.\"))\n\n"
+                + "Element.of(\"dialog\")\n"
+                + "    .attr(\"open\", true)\n"
+                + "    .child(p(\"Real HTML dialog\"))\n\n"
+                + "table()\n"
+                + "    .child(caption(\"Metrics\"))\n"
+                + "    .child(colgroup().child(col()).child(col()))\n"
+                + "    .child(thead().child(tr().child(th(\"Name\")).child(th(\"Value\"))))\n"
+                + "    .child(tbody().children(rows))\n"
+                + "    .child(tfoot().child(tr().child(td().attr(\"colspan\", \"2\").child(\"Generated with Java\"))))\n\n"
+                + "template().child(slot().attr(\"name\", \"actions\"))\n"
+                + "div().attr(\"popover\", true).child(\"Popover content\");\n";
     }
 
     private String liveEventCode() {
         return ""
-                + "button(\"Salvar\").onClick(this::save)\n"
+                + "button(\"Save\").onClick(this::save)\n"
                 + "inputText().onInput(this::markDirty)\n"
                 + "select().onChange(this::reload)\n"
                 + "form().onSubmit(this::submit);\n";
@@ -407,49 +572,89 @@ public final class DocumentationPage {
         return ""
                 + "form()\n"
                 + "    .onSubmit(this::submit)\n"
-                + "    .child(label(\"Nome\").forId(\"name\"))\n"
-                + "    .child(inputText().id(\"name\").name(\"name\").required(true))\n"
-                + "    .child(inputNumber().name(\"age\").min(\"0\").max(\"120\"))\n"
+                + "    .child(fieldset()\n"
+                + "        .child(legend(\"Account\"))\n"
+                + "        .child(label(\"Name\").forId(\"name\")))\n"
+                + "    .child(input().attr(\"type\", \"text\").attr(\"id\", \"name\").attr(\"name\", \"name\").attr(\"required\", true))\n"
+                + "    .child(inputNumber().attr(\"name\", \"age\").attr(\"min\", \"0\").attr(\"max\", \"120\"))\n"
                 + "    .child(inputPassword().name(\"password\"))\n"
                 + "    .child(checkbox().name(\"terms\").checked(true))\n"
                 + "    .child(radio().name(\"plan\").value(\"pro\"))\n"
-                + "    .child(select().child(option(\"Java\").value(\"java\")))\n"
-                + "    .child(textarea(\"Observacoes\").rows(3))\n"
-                + "    .child(button(\"Enviar\").type(\"submit\"));\n";
+                + "    .child(select().child(optgroup().label(\"Stack\").child(option(\"Java\").value(\"java\"))))\n"
+                + "    .child(input().attr(\"list\", \"languages\"))\n"
+                + "    .child(datalist().id(\"languages\").child(option(\"Java\")).child(option(\"Kotlin\")))\n"
+                + "    .child(textarea(\"Notes\").rows(3))\n"
+                + "    .child(output(\"Ready\").name(\"status\"))\n"
+                + "    .child(progress().attr(\"value\", \"70\").attr(\"max\", \"100\"))\n"
+                + "    .child(meter().attr(\"value\", \"0.7\").attr(\"min\", \"0\").attr(\"max\", \"1\"))\n"
+                + "    .child(button(\"Submit\").type(\"submit\"));\n";
     }
 
     private String cssCode() {
         return ""
                 + "div().css(\"flex flex-col gap-4 p-6 rounded-lg border shadow-sm\")\n"
-                + "h2(\"Titulo\").css(\"text-2xl font-bold text-primary-700\")\n"
-                + "p(\"Texto\").css(\"text-sm leading-relaxed text-slate-700\")\n"
-                + "button(\"Acao\").css(\"px-4 py-2 rounded bg-secondary-700 text-white\")\n\n"
-                + "// O renderer gera uma escala gradual a partir das cores base:\n"
+                + "h2(\"Title\").css(\"text-2xl font-bold text-primary-700\")\n"
+                + "p(\"Text\").css(\"text-sm leading-relaxed text-slate-700\")\n"
+                + "button(\"Action\").css(\"px-4 py-2 rounded bg-secondary-700 text-white\")\n\n"
+                + "// The renderer generates a gradual scale from base colors:\n"
                 + "bg-primary-50, bg-primary-500, bg-primary-900\n"
-                + "text-secondary-700, border-secondary-200\n";
+                + "text-secondary-700, border-secondary-200\n\n"
+                + "// External CSS: disable the internal renderer and use link/head.\n"
+                + "// In the default Netty runtime, prefer same-origin stylesheets.\n"
+                + "LiveSessionConfig.builder()\n"
+                + "    .cssMode(CssMode.EXTERNAL)\n"
+                + "    .externalStylesheet(\"/app.css\")\n"
+                + "    .build();\n";
+    }
+
+    private String springCode() {
+        return ""
+                + "// pom.xml: use dev.ujfe:ujfe-spring no app Spring Boot.\n"
+                + "// Do not add ujfe-http unless you want a separate Netty server.\n\n"
+                + "@Page(\"/\")\n"
+                + "@Component\n"
+                + "public final class HomePage {\n"
+                + "    public Node render() {\n"
+                + "        return main().child(h1(\"UJFE + Spring Boot\"));\n"
+                + "    }\n"
+                + "}\n\n"
+                + "@Configuration\n"
+                + "public class UjfeConfig {\n"
+                + "    @Bean\n"
+                + "    Router ujfeRouter(HomePage homePage) {\n"
+                + "        return new Router().register(homePage);\n"
+                + "    }\n\n"
+                + "    @Bean\n"
+                + "    LiveSessionConfig ujfeLiveSessionConfig() {\n"
+                + "        return LiveSessionConfig.builder()\n"
+                + "            .title(\"UJFE Spring Demo\")\n"
+                + "            .build();\n"
+                + "    }\n"
+                + "}\n";
     }
 
     private String securityCode() {
         return ""
-                + "a(\"Seguro\").href(\"https://example.com\")\n"
+                + "a(\"Safe\").href(\"https://example.com\")\n"
                 + "img().src(\"data:image/png;base64,...\").alt(\"Preview\")\n"
-                + "div().title(\"Titulo\").ariaLabel(\"Regiao\").data(\"test-id\", \"hero\")\n\n"
-                + "// Rejeitado antes de renderizar:\n"
+                + "div().title(\"Title\").ariaLabel(\"Region\").data(\"test-id\", \"hero\")\n\n"
+                + "// Rejected before rendering:\n"
                 + "a(\"XSS\").href(\"javascript:alert(1)\")\n\n"
-                + "// O servidor tambem emite headers como CSP, nosniff,\n"
-                + "// Referrer-Policy, Permissions-Policy e frame-ancestors.\n";
+                + "// The server also emits headers such as CSP, nosniff,\n"
+                + "// Referrer-Policy, Permissions-Policy, and frame-ancestors.\n";
     }
 
     private String restCode() {
         return ""
-                + "RestClient client = RestClient.create();\n"
-                + "RestResponse response = client\n"
+                + "var client = RestClient.create();\n"
+                + "var response = client\n"
                 + "    .get(\"https://brasilapi.com.br/api/banks/v1\")\n"
                 + "    .requireSuccessful();\n\n"
-                + "List<Bank> banks = parseBanks(response.body());\n\n"
+                + "record Bank(String label, String selectValue) {}\n"
+                + "var banks = parseBanks(response.body());\n\n"
                 + "select().children(banks.stream()\n"
                 + "    .map(bank -> option(bank.label()).value(bank.selectValue()))\n"
-                + "    .collect(Collectors.toList()));\n";
+                + "    .toList());\n";
     }
 
     private String cliCommandCode() {
@@ -463,8 +668,8 @@ public final class DocumentationPage {
         return ""
                 + "<section class=\"p-4 flex flex-col gap-2\">\n"
                 + "  <h1 title=\"Hero\">Hello UJFE</h1>\n"
-                + "  <p>HTML convertido para Java DSL.</p>\n"
-                + "  <button>Salvar</button>\n"
+                + "  <p>HTML converted to the Java DSL.</p>\n"
+                + "  <button>Save</button>\n"
                 + "</section>\n";
     }
 
@@ -478,20 +683,24 @@ public final class DocumentationPage {
                 + "public final class Page {\n\n"
                 + "    public Node render() {\n"
                 + "        return section()\n"
-                + "                .css(\"p-4 flex flex-col gap-2\")\n"
-                + "                .child(h1().title(\"Hero\").child(text(\"Hello UJFE\")))\n"
-                + "                .child(p().child(text(\"HTML convertido para Java DSL.\")))\n"
-                + "                .child(button().child(text(\"Salvar\")));\n"
+                + "                .attr(\"class\", \"p-4 flex flex-col gap-2\")\n"
+                + "                .child(h1().attr(\"title\", \"Hero\").child(text(\"Hello UJFE\")))\n"
+                + "                .child(p().child(text(\"HTML converted to the Java DSL.\")))\n"
+                + "                .child(button().child(text(\"Save\")));\n"
                 + "    }\n"
                 + "}\n";
     }
 
     private String devPreviewCode() {
         return ""
-                + "LiveSession liveSession = new LiveSession(router, appTheme::cssTheme, true);\n\n"
-                + "// Quando ativo, o HTML inclui:\n"
+                + "LiveSessionConfig config = LiveSessionConfig.builder()\n"
+                + "    .themeSupplier(appTheme::cssTheme)\n"
+                + "    .devToolsEnabled(true)\n"
+                + "    .build();\n"
+                + "LiveSession liveSession = new LiveSession(router, config);\n\n"
+                + "// When enabled, the HTML includes:\n"
                 + "<script src=\"/_ujfe/dev.js\"></script>\n\n"
-                + "// O painel permite clicar em elementos e testar classes CSS\n"
-                + "// no browser, sem escrever JavaScript manual e sem Node/npm.\n";
+                + "// The panel lets you click elements and test CSS classes\n"
+                + "// in the browser without writing manual JavaScript or Node/npm.\n";
     }
 }
